@@ -1,4 +1,6 @@
 Changes
+examples/create_and_print_mediainfo_snak.pl
+examples/create_and_print_mediainfo_snak_translated.pl
 examples/create_and_print_sitelink.pl
 examples/create_and_print_snak.pl
 examples/create_and_print_snak_translated.pl
