@@ -1,4 +1,5 @@
 0.07
+ - Add doc for Wikibase::Datatype::Print::MediainfoSnak.
  - Add doc for Wikibase::Datatype::Print::Snak.
 
 0.06 2023-04-15T18:46:48+02:00
